# ohmyadmin

./: .gitignore  .pre-commit-config.yaml  README.md  build.js  issues.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sys  tailwind.config.js  test.py  tsconfig.json
.github/workflows/: lint.yml  lint_and_test.yml  publish.yml
.run/: esbuild_watch.run.xml  tailwind_watch.run.xml  uvicorn.run.xml
assets/: build.js  main.ts  package.json  tailwind.config.js  tsconfig.json  typings.d.ts  utils.ts
assets/components/: click_outside.ts  dropdown.ts  index.ts  modals.ts  popover.ts  toasts.ts
assets/components/forms/: index.ts  repeated_input.ts
assets/css/: colors.css  components.css  dark.css  forms.css  layouts.css  main.css  rich_text.css  table.css  theme.css
assets/css/components/: all.css  avatars.css  buttons.css  forms.css  menus.css  page.css  sidebar.css  table.css
assets/css/forms/: repeated_input.css
assets/js/: editor.ts  event_handlers.ts  events.ts  forms.ts  global_events.ts  globals.d.ts  main.ts  notifications.ts  tables.ts  toasts.ts
assets/js/components/: batch_toggle.ts  image_input.ts  index.ts  line_chart.ts  modal.ts  partition_metric_chart.ts  trend_metric_chart.ts
assets/metrics/: index.ts  partition.ts  trend.ts
docs/: demo.md
docs/api/: simple_page_api.md
docs/pages/: index.md
examples/: app.py  app2.py  config.py  demo.py  icons.py  models.py  seed.py  seed.sql  settings.py
examples/admin/: actions_demo.py  auth.py  blog_posts.py  brands.py  categories.py  categories_table.py  components.py  countries.py  currencies.py  customers.py  orders.py  products.py  products_page.py  profile.py  settings.py  users.py
examples/admin/form_layouts/: card_layout.py  fieldset_layout.py  simple_layout.py  (+1 more)
examples/old_admin/: blog_posts.py  brands.py  customers.py  orders.py  products.py  users.py
examples/resources/: brands.py  categories.py  contact_form.py  countries.py  currencies.py  custom_form_layout.py  customers.py  display_view.py  form_view.py  orders.py  products.py  users.py  users_table.py
examples/templates/: actions.html  calendar.html  components.html  example.html  photos.html  settings_page.html
ohmyadmin/: actions.py  admin.py  app.py  auth.py  authentication.py  batch_actions.py  breadcrumbs.py  choices.py  colors.py  components.py  contracts.py  dashboards.py  datasource.py  display_fields.py  fields.py  filters.py  flash.py  flash_messages.py  form_elements.py  formatters.py  forms.py  globals.py  helpers.py  htmx.py  i18n.py  layout.py  layouts.py  media_server.py  menu.py  menus.py  metrics.py  middleware.py  nav.py  object_actions.py  old_forms.py  ordering.py  page.py  pages.py  pagination.py  projections.py  (+17 more)
ohmyadmin/actions/: __init__.py  actions.py  batch_actions.py  object_actions.py
ohmyadmin/authentication/: policy.py
ohmyadmin/components/: __init__.py  base.py  components.py  control_flow.py  display.py  form.py  index.py  layout.py  menu.py  table.py  text.py
ohmyadmin/datasource/: base.py  memory.py  sqla.py
ohmyadmin/datasources/: datasource.py  sqlalchemy.py
ohmyadmin/ext/: sqla.py
ohmyadmin/forms/: layouts.py  utils.py
ohmyadmin/metrics/: __init__.py  base.py  partition.py  progress.py  trend.py  value.py
ohmyadmin/pages/: base.py  form.py  page.py  pagemixins.py  table.py
ohmyadmin/relations/: relation.py
ohmyadmin/resources/: actions.py  policy.py  resource.py
ohmyadmin/screens/: __init__.py  base.py  display.py  form.py  index.py  table.py
ohmyadmin/statics/: main.css  main.js  main.js.map  notifications.js
ohmyadmin/storages/: storage.py  uploaders.py
ohmyadmin/templates/: _menus.html  index.html  list.html  menu_group.html  menu_item.html  user_menu.html
ohmyadmin/views/: __init__.py  base.py  display.py  form.py  grid.py  index.py  resource.py  table.py
ohmyadmin3/: admin.py  flash_messages.py  forms.py  i18n.py  query.py  resources.py  routing.py  tools.py  validators.py
tests/: auth.py  conftest.py  factories.py  models.py  test_app.py  test_authentication.py  test_batch_actions.py  test_batch_actions_integration.py  test_helpers.py  test_htmx.py  test_layouts.py  test_markup_selector.py  test_memory_datasource.py  test_metrics.py  test_object_actions.py  test_object_actions_integration.py  test_ordering.py  test_page_actions.py  test_page_actions_integration.py  test_pagination.py  test_resources.py  test_responses.py  test_shortcuts.py  test_templating.py  utils.py
tests/actions/: test_base_batch_action.py  test_base_form_object_action.py  test_base_form_page_action.py  test_base_object_action.py  test_base_page_action.py  test_batch_delete.py  test_callback_object_action.py  test_callback_page_action.py  test_delete_object_action.py  test_link_object_action.py  test_link_page_action.py  test_object_action.py  test_page_action.py  test_submit_page_action.py
tests/components/: _test_base.py  _test_layout.py  test_layout.py
tests/datasources/: test_memory_datasource.py  test_operations.py
tests/filters/: test_choice_filter.py  test_date_filter.py  test_date_range_filter.py  test_datetime_range_filter.py  test_decimal_filter.py  test_filters.py  test_float_filter.py  test_integer_filter.py  test_menu.py  test_multichoice_filter.py  test_string_filter.py
tests/formatters/: test_avatar.py  test_badge.py  test_base.py  test_boolean.py  test_date.py  test_datetime.py  test_number.py  test_progress.py  test_string.py  test_time.py
tests/forms/: test_async_select_field.py  test_async_select_multiple_field.py  test_forms.py
tests/pages/: test_basepage.py  test_form_page.py  test_page.py  test_table_batch_actions.py  test_table_page.py  test_table_page_actions.py  test_table_page_cards.py  test_table_page_object_actions.py
tests/resources/: conftest.py  demo_resource.py  test_create_page.py  test_delete_page.py  test_edit_page.py  test_list_batch_actions.py  test_list_cards.py  test_list_object_actions.py  test_list_page.py  test_list_page_actions.py
tests/testing/: test_markup_selector.py
tests/views/: test_table_cell.py
(+320 files in other folders)
