[tool.poetry]
name = "ohmyadmin"
description = "Awesome admin panel for your business."
version = "0.4.0"
authors = ["Alex Oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alex-oleshkevich/ohmyadmin"
repository = "https://github.com/alex-oleshkevich/ohmyadmin"
documentation = "https://github.com/alex-oleshkevich/ohmyadmin"
keywords = []
include = ["ohmyadmin/statics/build/*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3"
starlette = "*"
tabler-icons = "*"
python-slugify = "^7.0"
WTForms = "^3"
python-multipart = "^0.0.5"
starlette-babel = "*"
starlette-flash = "*"
async-storages = "^0.4.1"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "^2.0.0"
asyncpg = "^0.26"
pytest = "^7.2"
pytest-asyncio = "^0.19"
pytest-cov = "^4.0"
black = "^22.10"
mypy = "^0.990"
flake8 = "^5.0"
types-python-slugify = "^6.1"
passlib = "^1.7.4"
itsdangerous = "^2.1.2"
Faker = "^15.0.0"
uvicorn = "^0.18.3"
starception = "^1.0"
httpx = "^0.23.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["css", "html", "javascript", "python", "typescript"], version = "^0.20.0" }
mkdocs-material = "^9.0.6"
mkautodoc = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
skip-string-normalization = true
line_length = 120
extend-exclude = true
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''


[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_standard_library = "dataclasses,typing_extensions"
known_first_party = "ohmyadmin"
known_third_party = ["pkg_resources", "toml"]
known_future_library = "__future__"
line_length = 120
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.coverage.run]
source = ["ohmyadmin"]
omit = [".venv/*", ".git/*", "*/__main__.py", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
    "def __repr__",
    'if self\.debug',
    "raise AssertionError",
    "raise NotImplementedError",
    '@(abc\.)?abstractmethod',
]
omit = [".venv/*", ".git/*", "*/__main__.py", "examples/*"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
files = ["ohmyadmin", "examples", "tests"]

[tool.pytest.ini_options]
minversion = "7.2"
asyncio_mode = 'auto'
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
